// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-plus Border 1`] = `
<span
  class="m-plus m--is-skin-default m--has-border"
/>
`;

exports[`Storyshots modul-components|m-plus Disabled 1`] = `
<span
  class="m-plus m--is-skin-default m--is-disabled"
/>
`;

exports[`Storyshots modul-components|m-plus Large 1`] = `
<span
  class="m-plus m--is-skin-default m--is-large"
/>
`;

exports[`Storyshots modul-components|m-plus Open 1`] = `
<span
  class="m-plus m--is-skin-default m--is-open"
/>
`;

exports[`Storyshots modul-components|m-plus Skin Light 1`] = `
<div
  style="background: lightgrey;"
>
  <span
    class="m-plus m--is-skin-light"
  />
</div>
`;

exports[`Storyshots modul-components|m-plus default 1`] = `
<span
  class="m-plus m--is-skin-default"
/>
`;
